tests/fixtures/negative/skt1-bad-magic.hex
584b543101
000000000000000000000000
00000000000000000000000000000000
